Prevent HContainer elements from wrapping.

--- a/frameworks/projects/HTML/src/main/resources/defaults.css
+++ b/frameworks/projects/HTML/src/main/resources/defaults.css
@@ -268,6 +268,7 @@ HContainer
 {
 	IBeadView: ClassReference("org.apache.flex.html.beads.ContainerView");
 	IBeadLayout: ClassReference("org.apache.flex.html.beads.layouts.HorizontalLayout");
+	white-space: nowrap;
 }
 
 Image
